--- a/APACHE_POI/lib/build.gradle
+++ b/APACHE_POI/lib/build.gradle
@@ -24,6 +24,10 @@ dependencies {
     // https://mvnrepository.com/artifact/org.testng/testng
     testImplementation group: 'org.testng', name: 'testng', version: '7.6.0'
 
+    // https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-core
+    // NOTE: Added to remove the "ERROR StatusLogger Log4j2 could not find a logging implementation. Please add log4j-core to the classpath. Using SimpleLogger to log to the console..." error shown
+    implementation group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.17.2'
+
     // https://mvnrepository.com/artifact/org.apache.poi/poi
     implementation group: 'org.apache.poi', name: 'poi', version: '5.2.2'
     // https://mvnrepository.com/artifact/org.apache.poi/poi-ooxml
