--- a/APACHE_POI/lib/build.gradle
+++ b/APACHE_POI/lib/build.gradle
@@ -12,7 +12,7 @@ apply plugin: 'application'
 group 'org.example'
 version '1.0-SNAPSHOT'
 
-sourceCompatibility = 1.8
+// sourceCompatibility = 1.8
 
 repositories {
     mavenCentral()
@@ -72,4 +72,4 @@ test {
 
 }
 
-mainClassName = 'readoperations.App'
+mainClassName = 'excelOperations.App'
